entities/search endpoint
