# openapi_server/models/entity_with_tags.py
@@ -301,6 +301,7 @@ class EntityWithTags(Model):
     def no_addresses(self):
         """Gets the no_addresses of this EntityWithTags.
 
+        number of contained addresses  # noqa: E501
 
         :return: The no_addresses of this EntityWithTags.
         :rtype: int
@@ -311,6 +312,7 @@ class EntityWithTags(Model):
     def no_addresses(self, no_addresses):
         """Sets the no_addresses of this EntityWithTags.
 
+        number of contained addresses  # noqa: E501
 
         :param no_addresses: The no_addresses of this EntityWithTags.
         :type no_addresses: int
